k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boinc-client
spec:
  replicas: 1
  selector:
     matchLabels:
        app: boinc-client
  template:
    metadata:
      labels:
        app: boinc-client
    spec:
      containers:
          - name: boinc-client
            image: ghcr.io/linuxserver/boinc
            resources:
              requests:
                 cpu: 100m
                 memory: 512Mi
              limits:
                 cpu: 2
                 memory: 2048Mi
            volumeMounts:
              - name: boinc-client-pvc
                mountPath: /config
      volumes:
          - name: boinc-client-pvc
            persistentVolumeClaim:
               claimName: boinc-client-pvc
---
apiVersion: v1 
kind: Service
metadata:
  name: boinc-client-svc
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: boinc-client
