k8s.civo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: boinc-client
spec:
  replicas: 1
  selector:
     matchLabels:
        app: boinc-client
  template:
    metadata:
      labels:
        app: boinc-client
    spec:
      containers:
          - name: boinc-client
            image: ghcr.io/linuxserver/boinc
            resources:
              requests:
                 cpu: 100m
                 memory: 512Mi
              limits:
                 cpu: 2
                 memory: 2048Mi
            volumeMounts:
              - name: boinc-client-pvc
                mountPath: /config
      volumes:
          - name: boinc-client-pvc
            persistentVolumeClaim:
               claimName: boinc-client-pvc
---
apiVersion: v1 
kind: Service
metadata:
  name: boinc-client-svc
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: boinc-client
---
# We're assuming our user is using Traefik here, but we may want to make this into a helm chart instead 
# if we're ever going to publish this to the marketplace at Civo.
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: boinc-client-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: boinc-client-svc
          servicePort: http
